--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "start": "vite"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "18.2.0",
@@ -16,7 +16,7 @@
   "devDependencies": {
     "vite": "5.4.21",
     "tailwindcss": "3.3.5",
-    "autoprefixer": "10.4.14",
-    "postcss": "8.4.24"
+    "postcss": "8.4.24",
+    "autoprefixer": "10.4.14"
   }
 }
