--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@supabase/supabase-js": "2.34.0"
   },
   "devDependencies": {
-    "vite": "5.4.21",
-    "tailwindcss": "3.3.5",
-    "postcss": "8.4.24",
-    "autoprefixer": "10.4.14"
-  }
+  "vite": "5.4.21",
+  "tailwindcss": "3.3.5",
+  "postcss": "8.4.24",
+  "autoprefixer": "10.4.14",
+  "@vitejs/plugin-react": "latest"
 }
+
